# gocortexbrokenbank-c2c

./: Dockerfile  README.md  app.py  auth_traffic_generator.py  deploy.sh  docker-compose.yml  log_shipping.py  pyproject.toml  requirements.txt  vulnerable-requirements.txt
.github/workflows/: container-build-and-push-ecr  container-build-and-push-ecr.yaml  container-publish-dockerhub.yaml  container-publish-ghcr.yaml  cortex-cli-code-scan.yml  cortex-cli-containerimage-pullandscan.yml  semgrep.yml  yor-tag-iac
aws/: sflab-aws-jun26-ec2runtimetesting.yaml  sflab-aws-jun26-ekscluster.yaml
chatbot/: __init__.py  concierge.py
config/: anomaly_seeds.yaml  localise.yaml  localise.yaml.kr  logging.yaml  supervisord.conf
docs/: ENDPOINTS_EXPLOITABILITY.md
exploit-app/: pom.xml
exploit-app/src/main/resources/: servlet-locale.properties
k8s/: gocortexbrokenbank.yaml
observability/: metrics.py
react-app/: package.json
react-app/app/: layout.jsx
scripts/: log-forwarder.py
templates/: base.html  concierge.html  netbank.html
