[project]
name = "gocortexbrokenbank"
version = "1.5.0"
description = "GoCortex Broken Bank - Intentionally vulnerable banking application for CI/CD security testing and educational purposes"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Simon Sigre", email = "simon.sigre@gocortex.com"},
]
requires-python = ">=3.11"
dependencies = [
    # Vulnerable packages for SAST testing (pinned to vulnerable versions)
    "cryptography==39.0.0",
    "email-validator==1.1.3",
    "flask==2.0.1",
    "flask-login==0.5.0",
    "flask-sqlalchemy==2.5.1",
    "gunicorn==20.1.0",
    "ldap3==2.8.1",
    "pyjwt==1.7.1",
    "pymongo==3.12.0",
    "pillow==8.1.0",
    "faker==18.13.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-exporter-prometheus==0.62b0",
    "prometheus-client==0.20.0",
    "pyyaml==6.0",
    "requests==2.25.1",
    "sqlalchemy==1.4.23",
    "urllib3==1.26.5",
    "werkzeug==2.0.1",
    "jinja2==3.0.1",
    # Local LLM runtime for the Mars Banking Initiative Concierge (LLM01/LLM06 demo)
    "llama-cpp-python==0.3.5",
    "huggingface_hub",
    # PyGremlinBox varied license packages for license compliance testing
    "pygremlinbox-agpl-1-0==1.4.6",
    "pygremlinbox-agpl-1-0-only==1.4.6",
    "pygremlinbox-agpl-1-0-or-later==1.4.6",
    "pygremlinbox-agpl-3-0==1.4.6",
    "pygremlinbox-agpl-3-0-only==1.4.6",
    "pygremlinbox-agpl-3-0-or-later==1.4.6",
    "pygremlinbox-apsl==1.4.6",
    "pygremlinbox-arphic-1999==1.4.6",
    "pygremlinbox-artistic-1-0==1.4.6",
    "pygremlinbox-busl-1-1==1.4.6",
    "pygremlinbox-c-uda-1-0==1.4.6",
    "pygremlinbox-cal-1-0-combined-work-exception==1.4.6",
    "pygremlinbox-cc-by-nc-3-0-de==1.4.6",
    "pygremlinbox-cc-by-nc-nd-3-0-de==1.4.6",
    "pygremlinbox-cc-by-nc-nd-3-0-igo==1.4.6",
    "pygremlinbox-cc-by-nc-sa-2-0-de==1.4.6",
    "pygremlinbox-cc-by-nc-sa-2-0-fr==1.4.6",
    "pygremlinbox-cc-by-nc-sa-2-0-uk==1.4.6",
    "pygremlinbox-cc-by-nc-sa-3-0-de==1.4.6",
    "pygremlinbox-cc-by-nc-sa-3-0-igo==1.4.6",
    "pygremlinbox-cc-by-nd-3-0-de==1.4.6",
    "pygremlinbox-cc-by-sa-2-0-uk==1.4.6",
    "pygremlinbox-cc-by-sa-2-1-jp==1.4.6",
    "pygremlinbox-cc-by-sa-3-0-at==1.4.6",
    "pygremlinbox-cc-by-sa-3-0-de==1.4.6",
    "pygremlinbox-cc-by-sa-4-0==1.4.6",
    "pygremlinbox-cddl-1-0==1.4.6",
    "pygremlinbox-cdla-sharing-1-0==1.4.6",
    "pygremlinbox-cern-ohl-s-2-0==1.4.6",
    "pygremlinbox-cern-ohl-w-2-0==1.4.6",
    "pygremlinbox-copyleft-next-0-3-0==1.4.6",
    "pygremlinbox-copyleft-next-0-3-1==1.4.6",
    "pygremlinbox-cpol-1-02==1.4.6",
    "pygremlinbox-ecos-2-0==1.4.6",
    "pygremlinbox-epl-1-0==1.4.6",
    "pygremlinbox-epl-2-0==1.4.6",
    "pygremlinbox-eupl-1-1==1.4.6",
    "pygremlinbox-eupl-1-2==1.4.6",
    "pygremlinbox-eupl-3-0==1.4.6",
    "pygremlinbox-fdk-aac==1.4.6",
    "pygremlinbox-gpl-2-0==1.4.6",
    "pygremlinbox-gpl-3-0==1.4.6",
    "pygremlinbox-hippocratic-2-1==1.4.6",
    "pygremlinbox-jpl-image==1.4.6",
    "pygremlinbox-lgpl-2-0==1.4.6",
    "pygremlinbox-lgpl-2-1==1.4.6",
    "pygremlinbox-lgpl-3-0==1.4.6",
    "pygremlinbox-linux-man-pages-copyleft==1.4.6",
    "pygremlinbox-mpl-1-1==1.4.6",
    "pygremlinbox-mpl-2-0==1.4.6",
    "pygremlinbox-ms-lpl==1.4.6",
    "pygremlinbox-ncgl-uk-2-0==1.4.6",
    "pygremlinbox-openpbs-2-3==1.4.6",
    "pygremlinbox-osl-3-0==1.4.6",
    "pygremlinbox-polyform-noncommercial-1-0-0==1.4.6",
    "pygremlinbox-polyform-small-business-1-0-0==1.4.6",
    "pygremlinbox-qpl-1-0-inria-2004==1.4.6",
    "pygremlinbox-sendmail-8-23==1.4.6",
    "pygremlinbox-simpl-2-0==1.4.6",
    "pygremlinbox-sspl-1-0==1.4.6",
    "pygremlinbox-tapr-ohl-1-0==1.4.6",
    "pygremlinbox-tpl-1-0==1.4.6",
    "pygremlinbox-ucl-1-0==1.4.6",
    "pygremlinbox-unlicense==1.4.6",
    "pygremlinbox-wxwindows==1.4.6",
]

# Optional dependencies are NOT installed by the shipped Dockerfile pip block.
# They are listed so that SCA tooling reports CVE coverage across additional
# ecosystems. The PostgreSQL driver lives here because the container ships with
# the SQLite default DATABASE_URL; psycopg2 is only required when an operator
# overrides DATABASE_URL to point at PostgreSQL.
[project.optional-dependencies]
sca-scanner-only = [
    "psycopg2-binary==2.9.6",
]
